--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -291,45 +291,45 @@ PL_B_11 : "👤 Play Personal Top 10 Tracks"
 ST_B_1 : "🔊 Aud Quality"
 ST_B_2 : "🎥 Vid Quality"
 ST_B_3 : "🎩 Auth Users"
-ST_B_4 : "📱 Приборная панель"
-ST_B_5 : "▶️ Режим воспроизведения"
-ST_B_6 : "Язык"
-ST_B_7 : "🔄 Режим очистки"
-ST_B_8 : "{0} Низкое качество аудио"
-ST_B_9 : "{0} Аудио среднего качества"
-ST_B_10 : "{0} Аудио высокого качества"
-ST_B_11 : "{0} Низкое качество видео"
-ST_B_12 : "{0} Видео среднего качества"
-ST_B_13 : "{0} Видео высокого качества"
-ST_B_14 : "✅ Включено"
-ST_B_15 : "❌ Выключено"
-ST_B_16 : "👤 Администраторы"
-ST_B_17 : "👥 Все"
-ST_B_18 : "📋 Списки авторизованных пользователей"
-ST_B_19 : "🔎 Режим поиска"
-ST_B_20 : "✅ Прямой"
-ST_B_21 : "✅ Последовательный"
-ST_B_22 : "👨⚖️ Команды администратора"
-ST_B_23 : "🏘 Группа"
-ST_B_24 : "🏷 Канал"
-ST_B_25 : "🫂 Тип воспроизведения"
-ST_B_26 : "🗑 Команда Clean"
-ST_B_27 : "🧑🚀 Режим предложения".
+ST_B_4 : "📱 Dashboard"
+ST_B_5 : "▶️ Play Mode"
+ST_B_6 : " Language"
+ST_B_7 : "🔄 Clean Mode"
+ST_B_8 : "{0} Low Quality Audio"
+ST_B_9 : "{0} Medium Quality Audio"
+ST_B_10 : "{0} High Quality Audio"
+ST_B_11 : "{0} Low Quality Video"
+ST_B_12 : "{0} Medium Quality Video"
+ST_B_13 : "{0} High Quality Video"
+ST_B_14 : "✅ Enabled"
+ST_B_15 : "❌ Disabled"
+ST_B_16 : "👤 Admins"
+ST_B_17 : "👥 Everyone"
+ST_B_18 : "📋 Authorized Users Lists"
+ST_B_19 : "🔎 Search Mode"
+ST_B_20 : "✅ Direct"
+ST_B_21 : "✅ Inline"
+ST_B_22 : "👨‍⚖️ Admin Commands"
+ST_B_23 : "🏘 Group"
+ST_B_24 : "🏷 Channel"
+ST_B_25 : "🫂 Play Type"
+ST_B_26 : "🗑 Command Clean"
+ST_B_27 : "🧑‍🚀 Suggestion Mode"
 
 #Song
-SG_B_1 : "️ Открыть приватный чат"
-SG_B_2 : "🔊 Аудио"
-SG_B_3 : "🎥 Видео"
+SG_B_1 : "↗️ Open Private Chat"
+SG_B_2 : "🔊 Audio"
+SG_B_3 : "🎥 Video"
 
 #Stats
-SA_B_1 : "📢 10 лучших чатов"
-SA_B_2 : "🔢 Топ 10 треков"
-SA_B_3 : "🧛 10 лучших пользователей"
-SA_B_4 : "🏷 Топ 10 здесь"
-SA_B_5 : "💡 Общая статистика"
-SA_B_6 : "👤 Статистика пользователей"
-SA_B_7 : "🔢 Глобальная статистика Топ-10"
-SA_B_8 : "🤖 Статистика ботов"
+SA_B_1 : "📢 Top 10 Chat"
+SA_B_2 : "🔢 Top 10 Tracks"
+SA_B_3 : "🧛 Top 10 Users"
+SA_B_4 : "🏷 Top 10 Here"
+SA_B_5 : "💡 Overall Stats"
+SA_B_6 : "👤 User Stats"
+SA_B_7 : "🔢 Global Top 10 Stats"
+SA_B_8 : "🤖 Bot Stats"
 
 #Queue
 QU_B_1 : "📑 Queued List"
@@ -347,29 +347,29 @@ sudo_6 : "\n⭐️<u> **Sudo Users:**</u>\n"
 sudo_7 : "No Sudo Users"
 
 #Block
-block_1 : "{0} уже заблокирован у бота".
-block_2 : "Добавил **{0}** в список блокировки бота. Теперь пользователь не сможет пользоваться ботом ни при каких условиях.\n\nПроверить заблокированных пользователей: /blockedusers"
-block_3 : "Пользователь уже свободен и не заблокирован."
-block_4 : "Удалите пользователя из списка блокировки. Теперь пользователь сможет использовать бота."
-block_5 : "Заблокированных пользователей не найдено"
-block_6 : "Получение списка заблокированных пользователей... Пожалуйста, подождите"
-block_7 : "**Заблокированные пользователи:**\n\n"
+block_1 : "{0} is already blocked from the bot."
+block_2 : "Added **{0}** to Block List of bot. User won't be able to use bot now under any condition.\n\nCheck blocked users: /blockedusers"
+block_3 : "User is already free and not blocked."
+block_4 : "Removed User from the block list. User will be able to use bot now."
+block_5 : "No Blocked Users Found"
+block_6 : "Getting Blocked Users List.. Please Wait"
+block_7 : "**Blocked Users:**\n\n"
 
 #Blacklist Chats
 black_1 : "**Usage:**\n/blacklistchat [CHAT_ID]"
-black_2 : "Чат уже занесен в черный список".
-black_3 : "Чат успешно занесен в черный список"
+black_2 : "Chat is already blacklisted."
+black_3 : "Chat has been successfully blacklisted"
 black_4 : "**Usage:**\n/whitelistchat [CHAT_ID]"
-black_5 : "Чат уже внесен в белый список".
-black_6 : "Чат успешно внесен в белый список"
-black_7 : "**Черный список чатов:**\n\n"
-black_8 : "Нет чатов в черном списке"
+black_5 : "Chat is already whitelisted."
+black_6 : "Chat has been successfully whitelisted"
+black_7 : "**Blacklisted Chats:**\n\n"
+black_8 : "No Blacklisted Chats"
 
 #videolimit
-vid_1 : "**Использование:**\n/set_video_limit [Количество разрешенных чатов] или [Отключить]"
-vid_2 : "Пожалуйста, используйте цифровые числа для установки лимита."
-vid_3 : "Максимальный лимит видеозвонков определен в {0} чатов."
-vid_4 : "Видеозвонки отключены"
+vid_1 : "**Usage:**\n/set_video_limit [Number of chats allowed] or [Disable]"
+vid_2 : "Please Use Numeric Numbers for Setting Limit."
+vid_3 : "Video Calls Maximum Limit Defined to {0} Chats."
+vid_4 : "Video Calls Disabled"
 
 #maintenance
 maint_1 : "**Usage:**\n/maintenance [enable|disable]"
